MDL-42452 block: action menu is now constrained to the block container

--- a/theme/bootstrapbase/less/moodle/core.less
+++ b/theme/bootstrapbase/less/moodle/core.less
@@ -2053,10 +2053,9 @@ img#persona_signin {
         .box-shadow(5px 5px 20px 0 #666);
 
         a {
-            white-space:nowrap;
             display: block;
             color: @dropdownLinkColor;
-            padding:2px 1em 2px 0.5em;
+            padding:2px 1em 2px 24px;
             &:hover,
             &:focus {
                 color: @dropdownLinkColorHover;
@@ -2076,7 +2075,7 @@ img#persona_signin {
             vertical-align: middle;
         }
         .iconsmall {
-            margin-right:8px;
+            margin-left:-20px;
         }
         > li {
             display:block;
