--- a/theme/base/style/core.css
+++ b/theme/base/style/core.css
@@ -1478,7 +1478,8 @@ img#persona_signin { cursor: pointer; }
 
 .moodle-actionmenu[data-enhanced].show {position: relative;}
 .moodle-actionmenu[data-enhanced].show .menu {position: absolute;text-align:left;z-index: 1000;display: block;background-color: #fff;border: 1px solid #ccc;-webkit-border-radius: 5px;-moz-border-radius: 5px;border-radius: 5px;-webkit-box-shadow: 5px 5px 20px 0 #666666;-moz-box-shadow: 5px 5px 20px 0 #666666;box-shadow: 5px 5px 20px 0 #666666;}
-.moodle-actionmenu[data-enhanced].show .menu a {white-space:nowrap;display: block;padding: 2px 1em 2px 0.5em;color: #333333;}
+.moodle-actionmenu[data-enhanced].show .menu a {display: block;padding: 2px 1em 2px 24px;color: #333333;}
+.moodle-actionmenu[data-enhanced].show .menu a > img {margin-left:-20px;}
 .moodle-actionmenu[data-enhanced].show .menu a:hover,
 .moodle-actionmenu[data-enhanced].show .menu a:focus {color: #ffffff;background-color: #0088cc;}
 .moodle-actionmenu[data-enhanced].show .menu a:first-child {-webkit-border-top-right-radius: 4px;border-top-right-radius: 4px;-webkit-border-top-left-radius: 4px;border-top-left-radius: 4px;-moz-border-radius-topright: 4px;-moz-border-radius-topleft: 4px;}
