--- a/theme/base/style/course.css
+++ b/theme/base/style/course.css
@@ -309,7 +309,6 @@ input.titleeditor { width: 330px; vertical-align: text-bottom; }
 #course-category-listings li li li li li li li li .tree-icon {margin-left:5.5em;}
 
 #course-listing .listitem .drag-handle {margin-right:0.5em;}
-#course-listing .listitem .idnumber {color:#a1a1a8;margin-right:2em;}
 #course-listing .listitem .categoryname {display:inline-block;margin-left:1em;color:#a1a1a8;}
 #course-listing .listitem .coursename {display:inline-block;}
 
@@ -321,6 +320,7 @@ input.titleeditor { width: 330px; vertical-align: text-bottom; }
 #category-listing .listitem[data-selected='1'] > div > .ba-checkbox {margin:0 0.5em 0 0;padding:0;}
 .category-bulk-actions {margin: 0 0.5em 0.5em;}
 
+#course-category-listings .listitem .idnumber {color:#a1a1a8;margin-right:2em;}
 #course-category-listings .listitem > div > .float-left {float:left;}
 #course-category-listings .listitem > div > .float-right {float:right;text-align:right;}
 #course-category-listings .listitem[data-visible="0"],
