--- a/mod/assign/feedback/editpdf/styles.css
+++ b/mod/assign/feedback/editpdf/styles.css
@@ -45,7 +45,8 @@
     display: none;
 }
 .assignfeedback_editpdf_widget .pageheader button img {
-    padding-top: 2px;
+    padding-top: 3px;
+    vertical-align: top;
 }
 .assignfeedback_editpdf_widget .pageheader button:active {
     background-color: #ccc;
@@ -58,6 +59,8 @@
     border-radius: 0px;
     margin: 0px;
     height: 30px;
+    line-height: 30px;
+    vertical-align: top;
     cursor: pointer;
 }
 .assignfeedback_editpdf_widget .pageheader select {
@@ -65,6 +68,7 @@
     -webkit-appearance: none;
     -moz-appearance: menulist-text;
     background-color: #fff;
+    padding: 0px 10px;
 }
 .assignfeedback_editpdf_widget .pageheader select::-ms-expand {
     display: none;
@@ -117,6 +121,11 @@
 .dir-rtl .assignfeedback_editpdf_widget .navigation {
     float: right;
 }
+.assignfeedback_editpdf_widget .toolbar button {
+    box-shadow: none;
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+}
 .assignfeedback_editpdf_widget .toolbar {
     float: right;
 }
@@ -152,8 +161,8 @@
 .assignfeedback_editpdf_dropdown button {
     border: 0px;
     background: none;
-    padding-left: 12px;
-    padding-right: 12px;
+    padding-left: 10px;
+    padding-right: 10px;
     padding-top: 6px;
     padding-bottom: 6px;
     border-radius: 0px;
@@ -166,6 +175,10 @@
     box-shadow: none;
     -moz-box-shadow: none;
     -webkit-box-shadow: none;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    border-radius: 4px;
 }
 .moodle-dialogue-base .moodle-dialogue.assignfeedback_editpdf_dropdown .moodle-dialogue-bd {
     padding: 0px;
