--- a/theme/base/style/course.css
+++ b/theme/base/style/course.css
@@ -263,6 +263,7 @@ input.titleeditor { width: 330px; vertical-align: text-bottom; }
 #course-category-listings > div > div {min-height:300px;}
 #course-category-listings h3 {margin:0;padding:0.6em 1em 0.5em;text-align:left;background-color:#f7f7f9;border-bottom:1px solid #e1e1e8;}
 #course-category-listings h4 {margin:1em 0 0;padding:0.6em 1em 0.5em;text-align:left;}
+#course-category-listings .moodle-actionmenu {white-space:nowrap;}
 #course-category-listings .listing-actions {text-align:center;padding:0.4em 0.3em 0.3em;}
 #course-category-listings .listing-actions > * {display:inline-block;line-height:2.2em;}
 #course-category-listings .listing-actions > .moodle-actionmenu {display:inline-block;}
@@ -287,8 +288,6 @@ input.titleeditor { width: 330px; vertical-align: text-bottom; }
 #course-category-listings li[data-selected='1']:last-of-type > div {border-bottom-color:#e1e1e8;}
 #course-category-listings > div > div > ul.ml > li:first-child > div {border-top:0;}
 
-.jsenabled #course-category-listings .category-item-actions .menu-action-text {padding-left:0.3em;}
-
 #course-category-listings .listing-actions .moodle-actionmenu:not([data-enhanced]) li {line-height:normal;}
 #course-category-listings .listing-actions .moodle-actionmenu:not([data-enhanced]) > .menubar a,
 #course-category-listings .listing-actions .moodle-actionmenu:not([data-enhanced]) > .menu .menu-action-text {display:inline-block;}
@@ -296,8 +295,9 @@ input.titleeditor { width: 330px; vertical-align: text-bottom; }
 #course-category-listings .listing-actions .moodle-actionmenu:not([data-enhanced]) > .menubar a > img {display:none;}
 
 #course-category-listings .item-actions {margin-right:1em;display:inline-block;display:initial;}
-#course-category-listings .item-actions img {margin: 0 0.3em;}
-#course-category-listings .item-actions .menu .menu-action {margin-right:1em;}
+#course-category-listings .item-actions img {margin: 0 4px;vertical-align:inherit;}
+#course-category-listings .item-actions .menu img {max-width:none;width:12px;}
+#course-category-listings .item-actions .menu a {padding:4px 1em 4px 4px;}
 
 #course-category-listings li .tree-icon {margin-left:0;}
 #course-category-listings li li .tree-icon {margin-left:1em;}
@@ -312,7 +312,7 @@ input.titleeditor { width: 330px; vertical-align: text-bottom; }
 #course-listing .listitem .categoryname {display:inline-block;margin-left:1em;color:#a1a1a8;}
 #course-listing .listitem .coursename {display:inline-block;}
 
-#category-listing .course-count {color:#a1a1a8;margin-right:2em;min-width:35px;display:inline-block;}
+#category-listing .course-count {color:#a1a1a8;margin-right:2em;min-width:3.5em;display:inline-block;}
 #category-listing .listitem.collapsed > ul.ml {display: none;}
 #category-listing .course-count .smallicon {width:0.8em;height:0.8em;vertical-align:middle;margin:0 0.3em;}
 
