--- a/theme/bootstrapbase/less/moodle/course.less
+++ b/theme/bootstrapbase/less/moodle/course.less
@@ -982,6 +982,12 @@ span.editinstructions {
         vertical-align: baseline;
         white-space: nowrap;
     }
+    .moodle-actionmenu {
+        white-space:nowrap;
+    }
+    .moodle-actionmenu[data-enhanced].show .menu a {
+        padding-left:1em;
+    }
 }
 
 .course-being-dragged-proxy {
