MDL-42628: fix RTL for course management

--- a/theme/bootstrapbase/less/moodle/course.less
+++ b/theme/bootstrapbase/less/moodle/course.less
@@ -859,8 +859,6 @@ span.editinstructions {
     li {
         line-height:2.2em;
         > div {
-            border-bottom:1px solid #fff;
-            border-top:1px solid #fff;
             &:hover {
                 background-color:#fafafa;
             }
@@ -1068,7 +1066,6 @@ span.editinstructions {
         }
         .pair-key {
             font-weight:bold;
-            text-align:right;
             vertical-align: top;
             span {
                 margin-right: 1rem;
@@ -1078,16 +1075,12 @@ span.editinstructions {
         .pair-value select {
             max-width:100%;
         }
-        &:last-child {
-            border-bottom-width:0;
-        }
     }
 
     .bulk-actions .detail-pair {
         > * {
             display:block;
             width:100%;
-            text-align:left;
         }
     }
 
@@ -1113,6 +1106,95 @@ span.editinstructions {
     .select-a-category .notifymessage,
     .select-a-category .alert {
         margin: 1em;
+    }
+}
+
+.dir-rtl #course-category-listings {
+    #category-listing,
+    #course-listing {
+        float: right;
+        margin-left: 0;
+    }
+
+    .listitem {
+        > div {
+            > .float-left {
+                float:right;
+            }
+            > .float-right {
+                float:left;
+                text-align:left;
+            }
+        }
+    }
+    li {
+        .tree-icon {
+            margin: 2px 0 0 6px;
+        }
+
+        // Tree item indenting to represent depth.
+        .tree-icon {margin-right:0;}
+        li .tree-icon {margin-right:1em;}
+        li li .tree-icon {margin-right:2em;}
+        li li li .tree-icon {margin-right:3em;}
+        li li li li .tree-icon {margin-right:4em;}
+        li li li li li .tree-icon {margin-right:4.5em;}
+        li li li li li li .tree-icon {margin-right:5em;}
+        li li li li li li li .tree-icon {margin-right:5.5em;}
+    }
+    #category-listing {
+        .listitem {
+            > div {
+                margin-right:0.5em;
+                margin-left: 0;
+                > .ba-checkbox {
+                  margin:-1px 0 0 0.5em;
+                }
+            }
+
+            &[data-selected='1'] > div > .ba-checkbox {
+                margin:0 0 0 0.5em;
+            }
+        }
+        .course-count {
+            margin-left:2rem;
+        }
+        .bulk-action-checkbox {
+            margin-left: -3px;
+            margin-right: 0;
+        }
+    }
+    #course-listing {
+        padding-right: 24px;
+        .listitem {
+            .idnumber {
+                color:#a1a1a8;
+                padding-right:2em;
+            }
+            .categoryname {
+                display:inline-block;
+                margin-right:1em;
+                margin-left:0;
+            }
+            .drag-handle {
+                margin: 0 6px 0 6px;
+            }
+            > div {
+                padding-left:1rem;
+            }
+        }
+        .bulk-action-checkbox {
+            vertical-align:middle;
+            margin:-2px 0 0 6px;
+        }
+    }
+  .detail-pair {
+        .pair-key {
+            span {
+                margin-right:0;
+                margin-left: 0;
+            }
+        }
     }
 }
 
@@ -1144,7 +1226,16 @@ span.editinstructions {
         padding-left:1em;
     }
 }
-
+.dir-rtl .coursecat-management-header {
+    h2 {
+        text-align:right;
+    }
+    > div {
+        float:left;
+        margin-right:1em;
+        margin-left: 0;
+    }
+}
 .course-being-dragged-proxy {
     border: 0;
     color: @linkColor;
