--- a/theme/base/style/course.css
+++ b/theme/base/style/course.css
@@ -324,6 +324,8 @@ input.titleeditor { vertical-align: text-bottom; }
 
 /** Two column layout */
 #course-category-listings.columns-2 > #category-listing > div {border-right:1px solid #e1e1e8;}
+.dir-rtl #course-category-listings.columns-2 > #category-listing > div {border-left:1px solid #e1e1e8;border-right:0;}
+
 #course-category-listings.columns-2 > #course-listing > div {border-left:1px solid #e1e1e8;margin-left:-1px;}
 #course-category-listings.columns-2.viewmode-courses.course-selected > #course-listing > div {border-right:1px solid #e1e1e8;margin-right:-1px;}
 #course-category-listings.columns-2 > #course-detail > div {border-left:1px solid #e1e1e8;}
@@ -337,8 +339,11 @@ input.titleeditor { vertical-align: text-bottom; }
 #course-category-listings > div > div {min-height:300px;}
 #course-category-listings h3 {margin:0;padding:0.6em 1em 0.5em;text-align:left;background-color:#f7f7f9;border-bottom:1px solid #e1e1e8;}
 #course-category-listings h4 {margin:1em 0 0;padding:0.6em 1em 0.5em;text-align:left;}
+.dir-rtl #course-category-listings h3,
+.dir-rtl #course-category-listings h4 {text-align:right;}
 .coursecat-management-header .moodle-actionmenu,
 #course-category-listings .moodle-actionmenu {white-space:nowrap;}
+
 #course-category-listings .listing-actions {text-align:center;padding:0.4em 0.3em 0.3em;}
 #course-category-listings .listing-actions > * {display:inline-block;line-height:2.2em;}
 #course-category-listings .listing-actions > .moodle-actionmenu {display:inline-block;}
@@ -358,6 +363,7 @@ input.titleeditor { vertical-align: text-bottom; }
 #course-category-listings li+li > div,
 #course-category-listings li:first-child > div {border-top-color:#f7f7f9;}
 #course-category-listings li .tree-icon {vertical-align:text-top;margin-right:0.5em;width:12px;height:12px;}
+.dir-rtl #course-category-listings li .tree-icon {margin-left:0.5em;}
 #course-category-listings li[data-selected='1'] > div {background-color:#FFFFD8;border-top-color: #e1e1e8;border-bottom-color:#f7f7f9;}
 #course-category-listings li[data-selected='1'] li:first-of-type > div,
 #course-category-listings li[data-selected='1'][data-expandable='0']+li > div {border-top-color:#e1e1e8;}
@@ -395,6 +401,15 @@ input.titleeditor { vertical-align: text-bottom; }
 #course-category-listings li li li li li li li .tree-icon {margin-left:5em;}
 #course-category-listings li li li li li li li li .tree-icon {margin-left:5.5em;}
 
+.dir-rtl #course-category-listings li .tree-icon {margin-right:0;margin-left: 0.5em;}
+.dir-rtl #course-category-listings li li .tree-icon {margin-right:1em;}
+.dir-rtl #course-category-listings li li li .tree-icon {margin-right:2em;}
+.dir-rtl #course-category-listings li li li li .tree-icon {margin-right:3em;}
+.dir-rtl #course-category-listings li li li li li .tree-icon {margin-right:4em;}
+.dir-rtl #course-category-listings li li li li li li .tree-icon {margin-right:4.5em;}
+.dir-rtl #course-category-listings li li li li li li li .tree-icon {margin-right:5em;}
+.dir-rtl #course-category-listings li li li li li li li li .tree-icon {margin-right:5.5em;}
+
 #course-listing .listitem .drag-handle {margin-right:0.5em;}
 #course-listing .listitem .categoryname {display:inline-block;margin-left:1em;color:#a1a1a8;}
 #course-listing .listitem .coursename {display:inline-block;}
@@ -404,12 +419,17 @@ input.titleeditor { vertical-align: text-bottom; }
 #category-listing .course-count .smallicon {width:0.8em;height:0.8em;vertical-align:middle;margin:0 0.3em;}
 
 #category-listing .listitem > div > .ba-checkbox {vertical-align:middle;width:2.2em;text-align:center;margin:-1px 0;padding-top:2px;margin-right:0.5em;}
+.dir-rtl #category-listing .listitem > div > .ba-checkbox {margin-left:0.5em;margin-right:0.5em;}
 #category-listing .listitem[data-selected='1'] > div > .ba-checkbox {margin:0 0.5em 0 0;padding:0;}
+.dir-rtl #category-listing .listitem[data-selected='1'] > div > .ba-checkbox {margin-left:0.5em;}
 .category-bulk-actions {margin: 0 0.5em 0.5em;}
 
 #course-category-listings .listitem .idnumber {color:#a1a1a8;margin-right:2em;}
 #course-category-listings .listitem > div > .float-left {float:left;}
 #course-category-listings .listitem > div > .float-right {float:right;text-align:right;}
+.dir-rtl #course-category-listings .listitem > div > .float-left {float:right;}
+.dir-rtl #course-category-listings .listitem > div > .float-right {float:left;text-align:left;}
+
 #course-category-listings .listitem[data-visible="0"],
 #course-category-listings .listitem[data-visible="0"] a.categoryname,
 #course-category-listings .listitem[data-visible="0"] > div > a {color:#AAA;}
@@ -435,16 +455,19 @@ input.titleeditor { vertical-align: text-bottom; }
 #course-category-listings .detail-pair .pair-key span {margin-right: 1em;display:block;}
 #course-category-listings .detail-pair:last-child {border-bottom-width:0;}
 
-#course-category-listings .bulk-actions .detail-pair > * {display:block;width:100%;text-align:left;}
+#course-category-listings .bulk-actions .detail-pair > * {display:block;width:100%;}
 #course-category-listings .bulk-actions .detail-pair .pair-value {margin-left:2.2em;}
+.dir-rtl #course-category-listings .bulk-actions .detail-pair .pair-value {margin-left:0;margin-right:2.2em;}
 
 #course-category-listings .select-a-category .notifymessage,
 #course-category-listings .select-a-category .alert {margin: 1em;}
 
 /** Management header styling **/
 .coursecat-management-header {vertical-align:middle;}
-.coursecat-management-header  h2 {display:inline-block;text-align:left;}
-.coursecat-management-header  > div {display:inline-block;float:right;margin-left:1em;}
+.coursecat-management-header h2 {display:inline-block;text-align:left;}
+.coursecat-management-header > div {display:inline-block;float:right;margin-left:1em;}
+.dir-rtl .coursecat-management-header h2 {text-align:right;}
+.dir-rtl .coursecat-management-header > div {float:left;margin-right:1em;margin-left:0;}
 .coursecat-management-header .view-mode-selector img {margin-left:0.5em;vertical-align: baseline;}
 .coursecat-management-header  select {max-width: 300px;white-space: nowrap;}
 
@@ -455,6 +478,7 @@ input.titleeditor { vertical-align: text-bottom; }
 .listing-pagination-totals.dimmed {color:#999;margin:0.4em 1em 0.45em;}
 
 #category-listing .bulk-action-checkbox {vertical-align:middle;margin:0 0 0.5em 3px;}
+.dir-rtl #category-listing .bulk-action-checkbox {vertical-align:middle;margin:0 3px 0.5em 0;}
 #course-listing .bulk-action-checkbox {margin-right:0.6em;vertical-align:middle;margin-bottom:0.5em;}
 
 /**
