--- a/theme/bootstrapbase/less/moodle/course.less
+++ b/theme/bootstrapbase/less/moodle/course.less
@@ -45,9 +45,9 @@
     }
     .activity {
         .spinner {
-            margin: 4px;
-            left: 0;
+            left: 100%;
             position: absolute;
+            vertical-align: text-bottom;
         }
 
         .editing_move {
@@ -110,7 +110,8 @@
 .dir-rtl .section {
     .activity {
         .spinner {
-            left: 0;
+            left: auto;
+            right: 100%;
         }
 
         .editing_move {
