MDL-42711 theme port from LM: MDLSITE-2463 wrap tinymce instances responsively on mod/data pages (editing) for smaller screen widths

--- a/theme/bootstrapbase/less/moodle/responsive.less
+++ b/theme/bootstrapbase/less/moodle/responsive.less
@@ -348,7 +348,9 @@
     .nav-collapse.active {
         height: auto;
     }
-
+    .path-mod-data .box > table > tbody > tr > td {
+        display: block;
+    }
 }
 
 @media (max-width: 768px) {
