--- a/theme/bootstrapbase/less/moodle/course.less
+++ b/theme/bootstrapbase/less/moodle/course.less
@@ -1254,11 +1254,14 @@ span.editinstructions {
         vertical-align: baseline;
         white-space: nowrap;
     }
-    .moodle-actionmenu {
-        white-space:nowrap;
-    }
-    .moodle-actionmenu[data-enhanced].show .menu a {
-        padding-left:1em;
+    .view-mode-selector {
+        .moodle-actionmenu {
+            white-space:nowrap;
+            display:inline-block;
+        }
+        .moodle-actionmenu[data-enhanced].show .menu a {
+            padding-left:1em;
+        }
     }
 }
 .dir-rtl .coursecat-management-header {
