--- a/theme/bootstrapbase/less/moodle/chat.less
+++ b/theme/bootstrapbase/less/moodle/chat.less
@@ -1,7 +1,7 @@
 // Chat (more!)
 // -------------------------
 .yui-skin-sam .yui-layout  {
-    background: #dddde3 url([[pix:theme|bg]]) repeat 0 0;
+    background-color: @white;
 }
 
 .yui-skin-sam .yui-layout .yui-layout-unit div.yui-layout-bd-nohd,
@@ -13,12 +13,13 @@
 }
 
 .yui-skin-sam .yui-layout-unit-right {
-    background-color: darken(@navbarBackgroundHighlight, 5%);
-    #gradient > .vertical(@navbarBackgroundHighlight, darken(@navbarBackgroundHighlight, 5%));
+    .well;
+    border-radius: 0;
 }
 
 .yui-skin-sam .yui-layout-unit-bottom {
-    background-color: darken(@navbarBackgroundHighlight, 5%);
+    .well;
+    border-radius: 0;
 }
 
 .yui-skin-sam .yui-layout .yui-layout-unit div.yui-layout-bd {
@@ -27,55 +28,53 @@
 
 #chat-input-area table.generaltable,
 #chat-input-area table.generaltable td.cell {
-    background: transparent;
     border: 0;
-    padding: 0;
-    a {
-        color: lighten(@linkColor, 25%);
+    margin: 3px 20px;
+    input {
+        margin-right: 10px;
     }
 }
 
 #chat-userlist {
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px 5px;
     #users-list {
-        border-top: 1px solid darken(@navbarBackgroundHighlight, 8%);
-        border-bottom: 1px solid lighten(@navbarBackgroundHighlight, 5%);
+        border-top: 1px solid #ddd;
+        border-bottom: 1px solid @white;
         li {
-            border-top: 1px solid lighten(@navbarBackgroundHighlight, 5%);
-            border-bottom: 1px solid darken(@navbarBackgroundHighlight, 8%);
+            border-top: 1px solid @white;
+            border-bottom: 1px solid #ddd;
             padding: 5px 10px;
         }
-        a {
-            color: lighten(@linkColor, 10%);//@navbarAccentColor;
-        }
         img {
-            margin-right: 5px;
+            margin-right: 8px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
         }
     }
 }
 
 #chat-messages {
-    margin: 20px;
+    margin: 20px 25px;
     .chat-event {
         text-align: center;
         margin: 10px 0;
+        font-size: @fontSizeSmall;
+        color: #777;
     }
     .chat-message {
         background-color: @white;
-        border: 1px solid #ccc;
-        border: 1px solid rgba(0,0,0,.2);
-        .border-radius(6px);
-        .box-shadow(1px 1px 10px rgba(96,96,96,.1));
+        border: 1px dotted #ddd;
+        .border-radius(4px);
         padding: 4px 10px;
         margin: 10px 0;
         .time {
             float: right;
             font-size: 11px;
+            color: #777;
         }
     }
     .mdl-chat-my-entry .chat-message {
-        background-color: lighten(@navbarBackgroundHighlight, 75%);
+        background-color:#f6f6f6;
         .user {
             font-weight: bold;
         }
