--- a/theme/base/style/core.css
+++ b/theme/base/style/core.css
@@ -329,6 +329,39 @@ input#id_externalurl {direction:ltr;}
 #portfolio-add-button {display:inline;}
 
 /**
+ * Show the labels above text editors and file managers.
+ */
+#adminsettings #admin-summary .form-label,
+.mform .fcontainer .fitem_ffilemanager .fitemtitle,
+.mform .fcontainer .fitem_feditor .fitemtitle {
+    display: block;
+    margin-top: 4px;
+    margin-bottom: 4px;
+    text-align: left;
+    width: 100%;
+}
+.dir-rtl #adminsettings #admin-summary .form-label,
+.dir-rtl .mform .fcontainer .fitem_ffilemanager .fitemtitle,
+.dir-rtl .mform .fcontainer .fitem_feditor .fitemtitle {
+    text-align: right;
+}
+
+#adminsettings #admin-summary .form-setting,
+#adminsettings #admin-summary .form-description,
+.mform .fcontainer .fitem_ffilemanager .ffilemanager,
+.mform .fcontainer .fitem_feditor .feditor {
+    margin-left: 0%;
+    width: 100%;
+    float: left;
+}
+.dir-rtl #adminsettings #admin-summary .form-setting,
+.dir-rtl #adminsettings #admin-summary .form-description,
+.dir-rtl .mform .fcontainer .fitem_ffilemanager .ffilemanager,
+.dir-rtl .mform .fcontainer .fitem_feditor .feditor {
+    margin-right: 0%;
+}
+
+/**
  * phpinfo styles
  */
 .phpinfo .center {text-align: center;}
