--- a/theme/bootstrapbase/less/moodle/modules.less
+++ b/theme/bootstrapbase/less/moodle/modules.less
@@ -167,3 +167,16 @@ div#dock {
 .path-mod-wiki .wiki_contentbox {
     width: 100%;
 }
+
+// Survey module
+
+.path-mod-survey {
+    .surveytable {
+        .r0 {background-color: #eee;}
+        .r1 {background-color: #ddd;}
+        .rblock label {text-align: center;}
+    }
+    .resultgraph, .reportsummary, .studentreport, .reportbuttons, .centerpara {
+        text-align:center;
+    }
+}
